[package]
name        = "verylup"
version     = "0.1.4"
authors     = ["dalance@gmail.com"]
repository  = "https://github.com/veryl-lang/verylup"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "Veryl version manager"
edition     = "2021"

[dependencies]
anyhow        = "1.0"
clap          = {version = "4.5", features = ["derive"]}
clap_complete = "4.5"
console       = "0.15.11"
directories   = "6.0"
fern          = "0.7.0"
log           = "0.4.26"
reqwest       = {version = "0.12.12", default-features = false, features = ["rustls-tls", "json"]}
self-replace  = "1.5"
semver        = {version = "1.0", features = ["serde"]}
serde         = "1.0"
serde_derive  = "1.0"
serde_json    = "1.0"
tempfile      = "3.18"
tokio         = {version = "1.44", features = ["full"]}
toml          = "0.8.20"
zip           = "2.2"

[target."cfg(windows)".dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_JobObjects",
  "Win32_System_Kernel",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
]
version = "0.59"

[package.metadata.release]
tag = true
tag-name = "v{{version}}"
